--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,15 @@
 }
 
 header {
+    display: grid;
+    grid-template-rows: 100px 50px;
+    grid-template-columns: 20% 20% 20% 20% 20%;
     background-color: white;
-    height: 159px;
-    width: 100%;
 }
 
 .menu-bars {
-    float: left;
-    position: absolute;
-    left: 20px;
-    top: 20px;
+    background-color: white;
+    border: none;
 }
 
 .menu-bars a {
@@ -21,11 +20,32 @@ header {
     color: black;
 }
 
+.menu {
+    text-align: center;
+    margin-top: 30px;
+    grid-column: 1/2 ;
+    grid-row: 1/2 ;
+    z-index: 1;
+}
+
+.logo {
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+
+.logo img {
+    height: 50px;
+}
+
 .profile {
-    float: right;
-    position: absolute;
-    right: 20px;
-    top: 20px;
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    grid-column: 5;
+    grid-row: 1/2;
 }
 
 .profile a {
@@ -33,38 +53,38 @@ header {
     color: black;
 }
 
-.logo {
-    text-align: center;
-}
-
-.logo img {
-    padding: 20px;
-    height: 50px;
-}
-
 .search-bar {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    /* position: relative; */
+    height: 50px;
+    /* text-align: center; */
+    grid-column: 1/6;
+    grid-row: 2/3;
 }
 
 .search-bar input {
-    padding: 10px;
+    /* padding-left: 15px; */
     width: 100%;
-    height: 35px;
+    height: 50px;
     border: none;
     font-size: 30px;
-    background-color: aqua;
+    background-color: lightgray;
 }
 
 .search-bar button {
-    top: 100px;
+    cursor: pointer;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    top: 98px;
     right: 30px;
     position: absolute;
     background-color: transparent;
-    padding: 10px;
     border: none;
-    border-radius: 5px;
     font-size: 30px;
+}
+
+.search-bar button:hover {
+    background-color: gray;
 }
 
 body {
@@ -92,6 +112,11 @@ body {
 .categorias {
     width: 100%;
     margin-bottom: 10px;
+}
+
+.link-categoria {
+    text-decoration: none;
+    color: black;
 }
 
 .botao-categoria {
@@ -133,6 +158,7 @@ footer {
     padding: 10px 30px;
 }
 
+
 @media only screen and (min-width: 500px) {
     .search-bar input {
         font-size: 20px;
@@ -145,15 +171,20 @@ footer {
     }
 
     .botao-categoria {
+        height: 95%;
         font-size: 13px;
+        /* width: 30%; */
+    }
+
+    .link-categoria {
         width: 30%;
     }
 }
 
 @media only screen and (min-width: 900px) {
-    .menu-bars {
+    /* .menu-bars {
         display: none;
-    }
+    } */
 
     .categorias {
         justify-content: center;
@@ -162,7 +193,12 @@ footer {
     }
 
     .botao-categoria {
+        height: 95%;
         font-size: 13px;
+        /* width: 15%; */
+    }
+
+    .link-categoria {
         width: 15%;
     }
 
