--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
     padding: 0;
 }
 
+/* cabeçalho */
+
 header {
     display: grid;
     grid-template-rows: 100px 50px;
@@ -10,22 +12,55 @@ header {
     background-color: white;
 }
 
-.menu-bars {
+.menu-button {
     background-color: white;
     border: none;
 }
 
-.menu-bars a {
+.menu-button a {
     font-size: 40px;
     color: black;
 }
 
-.menu {
+.dropdown {
     text-align: center;
     margin-top: 30px;
     grid-column: 1/2 ;
     grid-row: 1/2 ;
     z-index: 1;
+}
+
+.dropdown li {
+    list-style-type: none;
+    text-align: left;
+    padding: 10px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+}
+
+.menu {
+    display: none;
+    background-color: gray;
+    position: absolute;
+    width: 100%;    
+}
+
+.sub-menu {
+    display: none;
+    background-color: darkgrey;
+    width: 100%;   
+}
+
+.dropdown:hover .menu{
+    display: block;
+}
+
+.menu li:hover>.sub-menu {
+    display: block;
 }
 
 .logo {
@@ -53,16 +88,21 @@ header {
     color: black;
 }
 
+.fav {
+    display: none;
+}
+
+.cart {
+    display: none;
+}
+
 .search-bar {
-    /* position: relative; */
     height: 50px;
-    /* text-align: center; */
     grid-column: 1/6;
     grid-row: 2/3;
 }
 
 .search-bar input {
-    /* padding-left: 15px; */
     width: 100%;
     height: 50px;
     border: none;
@@ -86,6 +126,33 @@ header {
 .search-bar button:hover {
     background-color: gray;
 }
+
+nav {
+    display: none;
+}
+
+/* rodapé */
+
+footer {
+    bottom: 0px;
+    height: 160px;
+    width: 100%;
+    background-color: red;
+}
+
+.social {
+    background-color: darkblue;
+    text-align: center;
+    padding: 20px;
+}
+
+.social a {
+    color: white;
+    font-size: 30px;
+    padding: 10px 30px;
+}
+
+/* corpo */
 
 body {
     background-color: darkgray;
@@ -139,31 +206,17 @@ body {
     font-weight: 700;
 }
 
-footer {
-    bottom: 0px;
-    height: 160px;
-    width: 100%;
-    background-color: red;
-}
 
-.social {
-    background-color: darkblue;
-    text-align: center;
-    padding: 20px;
-}
-
-.social a {
-    color: white;
-    font-size: 30px;
-    padding: 10px 30px;
-}
-
-
+/* tablet */
 @media only screen and (min-width: 500px) {
+    /* cabeçalho */
     .search-bar input {
         font-size: 20px;
     }
 
+    /* rodapé */
+
+    /* corpo */
     .categorias {
         justify-content: center;
         display: inline-flex;
@@ -173,7 +226,6 @@ footer {
     .botao-categoria {
         height: 95%;
         font-size: 13px;
-        /* width: 30%; */
     }
 
     .link-categoria {
@@ -181,11 +233,131 @@ footer {
     }
 }
 
-@media only screen and (min-width: 900px) {
-    /* .menu-bars {
-        display: none;
-    } */
+/* desktop */
+@media only screen and (min-width: 1000px) {
+    /* cabeçalho */
+    header {
+        grid-template-rows: 100px;
+        grid-template-columns: 20% 5% 40% 7% 7% 7% 7% 7%;
+    }
 
+    .dropdown {
+        display: none;
+    }
+    
+    .logo {
+        grid-column: 1/2;
+    }
+
+    .logo img {
+        height: 90px;
+    }
+
+    .profile {
+        grid-column: 7
+    }
+
+    .profile a {
+        font-size: 30px;
+    }
+
+    .fav {
+        display: block;
+        text-align: center;
+        margin-top: auto;
+        margin-bottom: auto;
+        grid-column: 5;
+    }
+    
+    .fav a {
+        font-size: 30px;
+        color: black;
+    }
+
+    .cart {
+        display: block;
+        text-align: center;
+        margin-top: auto;
+        margin-bottom: auto;
+        grid-column: 6;
+    }
+
+    .cart a {
+        font-size: 30px;
+        color: black;
+    }
+
+    .search-bar {
+        margin: auto;
+        width: 100%;
+        height: 50px;
+        grid-column: 2/4;
+        grid-row: 1;
+    }
+
+    .search-bar input {
+        border-radius: 20px;
+    }
+
+    .search-bar button {
+        padding: 5px;
+        margin: 5px;
+        top: 25px;
+        right: 36%;
+        position: absolute;
+    }
+
+    nav {
+        display: block;
+        text-align: center;
+        height: 50px;
+        width: 100%;
+        background-color: green;
+    }
+
+    .menu-2 {
+        font-size: 30px;
+        z-index: 1;
+    }
+
+    .menu-2 a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .menu-2 li{
+        padding: 9px 20px;
+        margin-top: auto;
+        margin-bottom: auto;
+        display: inline-block;
+        width: auto;
+    }
+
+    .menu-2 li:hover{
+        background-color: darkgrey;
+    }
+
+    .sub-menu-2 {
+        width: auto;
+        display: none;
+        position: absolute;
+        background-color: darkblue;
+    }
+
+    .sub-menu-2 li:hover {
+        background-color: blue;
+    }
+
+    .menu-2 li:hover>.sub-menu-2{
+        display: block;
+    }
+
+    /* rodapé */
+    .social a{
+        font-size: 20px;
+    }
+
+    /* corpo */
     .categorias {
         justify-content: center;
         display: inline-flex;
@@ -200,9 +372,5 @@ footer {
 
     .link-categoria {
         width: 15%;
-    }
-
-    .social a{
-        font-size: 20px;
     }
 }
