--- a/css/Header+Footer.css
+++ b/css/Header+Footer.css
@@ -4,22 +4,21 @@
 }
 
 /* cabeçalho */
-
 header {
     display: grid;
     grid-template-rows: 100px 50px;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    background-color: white;
+    background-color: black;
 }
 
 .menu-button {
-    background-color: white;
+    background-color: black;
     border: none;
 }
 
 .menu-button a {
     font-size: 40px;
-    color: black;
+    color: white;
 }
 
 .dropdown {
@@ -34,6 +33,8 @@ header {
     list-style-type: none;
     text-align: left;
     padding: 10px;
+    border-top: 1px solid black;
+    width: 100%;
 }
 
 .menu a {
@@ -44,15 +45,16 @@ header {
 
 .menu {
     display: none;
-    background-color: gray;
+    background-color: rgb(73, 73, 73);
     position: absolute;
     width: 100%;    
 }
 
 .sub-menu {
     display: none;
-    background-color: darkgrey;
-    width: 100%;   
+    background-color: #0096D6;
+    width: 100%;
+    margin-left: -10px;
 }
 
 .dropdown:hover .menu{
@@ -61,6 +63,11 @@ header {
 
 .menu li:hover>.sub-menu {
     display: block;
+}
+
+.sub-menu ul {
+    background-color: #015275;
+    margin-left: -10px;
 }
 
 .logo {
@@ -85,7 +92,7 @@ header {
 
 .profile a {
     font-size: 40px;
-    color: black;
+    color: white;
 }
 
 .fav {
@@ -97,7 +104,6 @@ header {
 }
 
 .search-bar {
-    height: 50px;
     grid-column: 1/6;
     grid-row: 2/3;
 }
@@ -135,13 +141,13 @@ nav {
 
 footer {
     bottom: 0px;
-    height: 160px;
+    height: 200px;
     width: 100%;
-    background-color: red;
+    background-color: black;
 }
 
 .social {
-    background-color: darkblue;
+    background-color: #0096D6;
     text-align: center;
     padding: 20px;
 }
@@ -152,60 +158,15 @@ footer {
     padding: 10px 30px;
 }
 
-/* corpo */
-
-body {
-    background-color: darkgray;
-}
-
-.main {
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align: center;
-}
-
-.title p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    text-transform: uppercase;
-}
-
-.banner-principal img {
-    height: auto;
-    width: 100%;
-}
-
-.categorias {
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.link-categoria {
-    text-decoration: none;
+.social a:hover 
+{
     color: black;
 }
-
-.botao-categoria {
+.info_footer {
     text-align: center;
-    background-color: white;
-    border: solid 2px gray;
-    border-radius: 3px;
-    margin: 5px;
+    padding: 20px;
+    color: gray;
 }
-
-.botao-categoria img {
-    width: 40%;
-    padding: 10px;
-}
-
-.botao-categoria p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-transform: uppercase;
-    padding: 10px;
-    font-weight: 700;
-}
-
 
 /* tablet */
 @media only screen and (min-width: 500px) {
@@ -215,22 +176,6 @@ body {
     }
 
     /* rodapé */
-
-    /* corpo */
-    .categorias {
-        justify-content: center;
-        display: inline-flex;
-        flex-wrap: wrap-reverse;
-    }
-
-    .botao-categoria {
-        height: 95%;
-        font-size: 13px;
-    }
-
-    .link-categoria {
-        width: 30%;
-    }
 }
 
 /* desktop */
@@ -239,6 +184,7 @@ body {
     header {
         grid-template-rows: 100px;
         grid-template-columns: 20% 5% 40% 7% 7% 7% 7% 7%;
+        background-color: white;
     }
 
     .dropdown {
@@ -259,6 +205,7 @@ body {
 
     .profile a {
         font-size: 30px;
+        color: black;
     }
 
     .fav {
@@ -310,19 +257,19 @@ body {
     nav {
         display: block;
         text-align: center;
-        height: 50px;
+        height: 41px;
         width: 100%;
-        background-color: green;
+        background-color: black ;
     }
 
     .menu-2 {
-        font-size: 30px;
+        font-size: 20px;
         z-index: 1;
     }
 
     .menu-2 a {
         text-decoration: none;
-        color: black;
+        color: white;
     }
 
     .menu-2 li{
@@ -334,43 +281,38 @@ body {
     }
 
     .menu-2 li:hover{
-        background-color: darkgrey;
+        background-color: rgb(73, 73, 73);
     }
 
     .sub-menu-2 {
+        color: white;
+        margin-top: 9px;
         width: auto;
         display: none;
         position: absolute;
-        background-color: darkblue;
+        background-color: #0096D6;
     }
 
     .sub-menu-2 li:hover {
-        background-color: blue;
+        background-color: #015275;
     }
 
     .menu-2 li:hover>.sub-menu-2{
         display: block;
+        width: min-content;
+    }
+
+    .sub-menu-2 li {
+        width: 100px;
+    }
+
+    .sub-menu-2 ul {
+        margin-top: -32px;
+        margin-left: 120px;
     }
 
     /* rodapé */
-    .social a{
+    .social a {
         font-size: 20px;
-    }
-
-    /* corpo */
-    .categorias {
-        justify-content: center;
-        display: inline-flex;
-        flex-wrap: wrap-reverse;
-    }
-
-    .botao-categoria {
-        height: 95%;
-        font-size: 13px;
-        /* width: 15%; */
-    }
-
-    .link-categoria {
-        width: 15%;
     }
 }
