--- a/css/style_home.css
+++ b/css/style_home.css
@@ -11,10 +11,10 @@ body {
     text-align: center;
 }
 
-.title p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+.title h1 {
     font-size: 20px;
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 .banner-principal img {
@@ -55,7 +55,7 @@ body {
 }
 
 /* tablet */
-@media only screen and (min-width: 500px) {
+@media only screen and (min-width: 550px) {
     /* corpo */
     .categorias {
         justify-content: center;
@@ -85,7 +85,7 @@ body {
 
     .botao-categoria {
         height: 95%;
-        font-size: 13px;
+        font-size: 15px;
     }
 
     .link-categoria {
