--- a/css/style_home.css
+++ b/css/style_home.css
@@ -36,6 +36,7 @@ body {
     text-align: center;
     background-color: white;
     margin: 5px;
+    border-radius: 5px;
 }
 
 .botao-categoria:hover {
