--- a/css/style_product_page.css
+++ b/css/style_product_page.css
@@ -8,20 +8,21 @@ body {
 .desc_page  {
     display: grid;
     grid-template-rows: auto auto auto auto auto;
-    grid-column: 50% 50%;
-    margin: auto;
+    grid-template-columns: 50% 50%;
+    margin: 20px auto 20px auto;
     background-color: white;
+    border-radius: 5px;
 }
 
 .desc_nome {
     grid-row: 1/2;
     grid-column: 1/3;
+    width: 100%;
 }
 
 .desc_img {
     grid-row: 2/3;
     grid-column: 1/3;
-    width: 100%;
 }
 
 .desc_img img {
@@ -30,7 +31,7 @@ body {
 
 .desc_preco {
     grid-row: 3/4;
-    grid-column: 1/3;
+    grid-column: 1/2;
     text-align: left;
     padding: 20px 0px 0px 10%;
 }
@@ -43,6 +44,7 @@ body {
 }
 
 .desc_favoritos button {
+    cursor: pointer;
     background-color: #0096D6;
     color: white;
     border: none;
@@ -62,6 +64,7 @@ body {
 }
 
 .desc_comprar button {
+    cursor: pointer;
     background-color: green;
     color: white;
     border: none;
@@ -84,6 +87,7 @@ body {
 
 /* tablet */
 @media only screen and (min-width: 550px) {
+    /* corpo */
     .desc_page {
         width: 70%;
     }
@@ -95,4 +99,57 @@ body {
     .desc_comprar i {
         font-size: 25px;
     }
+}
+
+/* desktop */
+@media only screen and (min-width: 1000px) {
+    /* corpo */
+    .desc_page  {
+        grid-template-rows: auto auto auto;
+        grid-template-columns: 50% 25% 25%;
+        margin: 20px auto 20px auto;
+    }
+
+    .desc_nome {
+        grid-row: 1/2;
+        grid-column: 2/4;
+        padding: 10px;
+        text-align: left;
+    }
+
+    .desc_img {
+        grid-row: 1/3;
+        grid-column: 1/2;
+        padding: 10px;
+    }
+
+    .desc_img img {
+        width: 100%;
+    }
+
+    .desc_preco {
+        grid-row: 3/4;
+        grid-column: 2/3;
+        padding: 10px;
+    }
+
+    .desc_favoritos {
+        grid-row: 3/4;
+        grid-column: 3/4;
+        padding: 10px
+    }
+    
+    .desc_comprar {
+        grid-row: 4/5;
+        grid-column: 2/4;
+        padding: 10px;
+    }
+
+    .desc_desc {
+        grid-row: 2/3;
+        grid-column: 2/4;
+        padding: 10px;
+        margin: 10px;
+    }
+
 }
