--- a/css/style_category.css
+++ b/css/style_category.css
@@ -1,13 +1,17 @@
-/* corpo Categoria Ofertas*/
-
 body {
-    background-color: gray;
     text-align: center;
+}
+
+h1 {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #0096D6;
 }
 
 .produto_card {
     display: grid;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto 40px;
     grid-template-columns: 100%;
     background-color: white;
     padding: 10px;
@@ -18,7 +22,7 @@ body {
     grid-row: 2;
     grid-column: 1;
     text-decoration: none;
-    background-color: green;
+    background-color: #008800;
     border-radius: 5px;
     text-align: center;
     color: white;
@@ -26,7 +30,7 @@ body {
 }
 
 .produto_botao:hover {
-    background-color: rgb(0, 180, 0);
+    background-color: #00aa00;
     text-decoration: underline;
 }
 
@@ -63,9 +67,12 @@ body {
     justify-self: right;
 }
 
+.produto_preco h5 {
+    text-decoration: line-through;
+}
+
 /* tablet */
 @media only screen and (min-width: 550px) {
-    /* corpo */
     .produtos {
         display: inline-flex;
         flex-wrap: wrap;
@@ -74,6 +81,7 @@ body {
     }
 
     .produto_card {
+        grid-template-rows: auto 30px;
         width: 40%;
         font-size: 15px;
         margin: 10px 0px 10px 0px;
@@ -86,7 +94,6 @@ body {
 
 /* desktop */
 @media only screen and (min-width: 1000px) {
-    /* corpo */
     .produtos {
         display: inline-flex;
         flex-wrap: wrap;
