--- a/css/style_info.css
+++ b/css/style_info.css
@@ -1,8 +1,107 @@
 .info_page {
-    margin: 20px auto 50px auto;
+    margin: 20px auto 200px auto;
     display: grid;
+    width: 98%;
+    font-size: 25px;
+    text-align: center;
 }
 
-.faq li {
+.info_page h2 {
+    color: #0096D6;
+}
+
+.search_faq {
+    justify-self: center;
+    width: 100%;
+    display: grid;
+    max-width: 800px;
+    grid-template-columns: auto 70px;
+    text-align: center;
+}
+
+#search {
+    grid-column: 1/3;
+    grid-row: 1;
+    margin: 25px 0px;
+    padding: 20px 0px;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    font-size: 30px;
+}
+
+#search_button {
+    grid-column: 2;
+    grid-row: 1;
+    cursor: pointer;
+    padding: 5px;
+    height: 75px;
+    width: 75px;
+    margin: auto;
+    border-radius: 5px;
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+}
+
+#search_button:hover {
+    background-color: #898989;
+}
+
+.qanda {
+    list-style: none;
+    margin-bottom: 50px;
+}
+
+.q {
+    background-color: black;
+    color: #0096D6;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.a {
     display: none;
+    background-color: #202020;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: 100;
+}
+
+.q:hover>.a {
+    display: block;
+}
+
+.video iframe {
+    width: 100%;
+    height: 400px;
+    
+}
+
+/* tablet */
+@media only screen and (min-width: 600px) {
+    .info_page {
+        width: 80%;
+    }
+
+    .video iframe{
+        width: 560px;
+        height: 315px;
+    }
+}
+
+/* desktop */
+@media only screen and (min-width: 1000px) {
+    .info_page {
+        width: 70%;
+    }
+
+    .a {
+        font-size: 15px;
+    }
 }
