--- a/css/style_product_page.css
+++ b/css/style_product_page.css
@@ -1,7 +1,4 @@
-/* corpo Pagina Produto Mouse Gamer*/
-
 body {
-    background-color: gray;
     text-align: center;
 }
 
@@ -17,12 +14,15 @@ body {
 .desc_nome {
     grid-row: 1/2;
     grid-column: 1/3;
-    width: 100%;
+    width: 95%;
+    margin: 10px auto;
 }
 
 .desc_img {
     grid-row: 2/3;
     grid-column: 1/3;
+    margin: 10px;
+    border: 2px solid #0096D6;
 }
 
 .desc_img img {
@@ -34,6 +34,10 @@ body {
     grid-column: 1/2;
     text-align: left;
     padding: 20px 0px 0px 10%;
+}
+
+.desc_preco h2 {
+    text-decoration: line-through;
 }
 
 .desc_favoritos {
@@ -53,6 +57,10 @@ body {
     height: 100px;
 }
 
+.desc_favoritos button:hover {
+    background-color: #015275;
+}
+
 .desc_favoritos i {
     font-size: 50px;
 }
@@ -65,7 +73,7 @@ body {
 
 .desc_comprar button {
     cursor: pointer;
-    background-color: green;
+    background-color: #008800;
     color: white;
     border: none;
     border-radius: 15px;
@@ -73,16 +81,22 @@ body {
     height: 100px;
 }
 
+.desc_comprar button:hover {
+    background-color: #00aa00;    
+}
+
 .desc_comprar i {
     font-size: 50px;
 }
 
 .desc_desc {
+    padding: 10px;
     grid-row: 5/6;
     grid-column: 1/3;
     border: 1px solid black;
     border-radius: 15px;
     margin: 0px 5% 20px 5%;
+    text-align: left;
 }
 
 /* tablet */
@@ -142,7 +156,6 @@ body {
     .desc_comprar {
         grid-row: 4/5;
         grid-column: 2/4;
-        padding: 10px;
     }
 
     .desc_desc {
